# husky_fei_robot

husky_fei_description/: CMakeLists.txt  package.xml
husky_fei_description/launch/: description.launch
husky_fei_description/meshes/: fei_rail.dae  tslot_500x20x20.dae
husky_fei_description/meshes/arm/: README
husky_fei_description/meshes/sensors/: PS3eye.dae
husky_fei_description/urdf/: frames.gv  husky_fei.gv  husky_fei.pdf.old  husky_fei.urdf  husky_fei.urdf.xacro  husky_fei_base.gv  husky_fei_base.urdf  husky_fei_test.urdf
husky_fei_description/urdf/arm/: arm.urdf.xacro  arm.xacro  arm_hardware.xacro
husky_fei_description/urdf/parts/: materials.urdf.xacro  parts.urdf.xacro  wheel.urdf.xacro
husky_fei_description/urdf/sensors/: 3dsensor_gazebo.urdf.xacro  barometer.urdf.xacro  gps.urdf.xacro  hector_baro_gazebo.urdf.xacro  hector_gps_gazebo.urdf.xacro  imu.urdf.xacro  imusensor_gazebo.urdf.xacro  kinect.urdf.xacro  kinect_camera.urdf.xacro  kingfisher_imu_gazebo.urdf.xacro  microstrain_3dmgx2_imu.urdf.xacro  multicamera.gazebo.xacro  multicamera.urdf.xacro  sick_lms100_gpu_laser.gazebo.xacro  sick_lms100_gpu_laser.urdf.xacro  sick_lms100_laser.gazebo.xacro  sick_lms100_laser.urdf.xacro
husky_fei_robot/: CMakeLists.txt  package.xml
husky_fei_teleop/: CMakeLists.txt  package.xml
husky_fei_teleop/launch/: husky_fei_teleop.rviz  teleop.launch  teleop_extreme3dpro.launch  teleop_joystick.launch  teleop_keyboard.launch
husky_fei_teleop/scripts/: joystick_teleop
husky_fei_teleop/src/: keyboard_teleop.cpp
